--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <li>W</li>
         </ul>
 
-        <div id="defaultTheme" class=" hidden h-screen grid grid-cols-3 p-10">
-            <div class="col-span-3 items-center text-center z-50">
-                <h1 class="text-7xl font-square text-amber-500 lg:text-black tracking-[.4em] text-stroke">
-                    JHENRICH D. ROQUIOS
+        <div id="defaultTheme" class="hidden h-screen grid grid-cols-3 p-10">
+            <div class="col-span-3 items-center text-center z-50 pb-10">
+                <h1 class="text-7xl font-tallfont text-amber-500 text-black tracking-[.2em] lg:tracking-[.5em] text-stroke">
+                    <span class="text-8xl text-amber-500 text-stroke-black">J</span>HENRICH D. <span class="text-stroke-black text-8xl text-amber-500">R</span>OQUIOS
                 </h1>
             </div>
             <div class="pl-0 col-span-3 flex justify-center lg:col-span-1 z-50 image-stroke">
-                <img id="defaultTheme" src="img/me.png" class="h-[300px] w-[300px]" />
+                <img src="img/me.png" class="h-[300px] w-[300px]" />
             </div>
             <div class="col-span-3 lg:col-span-2 z-50">
                 <div>
