--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <div class="absolute inset-0 flex flex-col items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100 p-6">
                         
                         <!-- Title -->
-                        <p class="text-white text-center font-inter font-black text-sm lg:text-2xl md:text-2xl mb-6">
+                        <p class="text-amber-500 text-stroke-black text-center font-inter font-black text-sm lg:text-2xl md:text-2xl mb-6">
                             FRAMEWORKS & STACKS:
                         </p>
 
@@ -533,18 +533,6 @@
                 <button class="absolute right-6 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white p-2 rounded-full hover:bg-opacity-75 transition-all" onclick="nextSlide()">
                     &#8250;
                 </button>
-                
-                <!-- Dots Indicator -->
-                <div class="flex justify-center mt-4 space-x-2">
-                    <span class="dot w-3 h-3 bg-gray-400 rounded-full cursor-pointer hover:bg-gray-600 transition-colors" onclick="showSlide(0)"></span>
-                    <span class="dot w-3 h-3 bg-gray-400 rounded-full cursor-pointer hover:bg-gray-600 transition-colors" onclick="showSlide(1)"></span>
-                    <span class="dot w-3 h-3 bg-gray-400 rounded-full cursor-pointer hover:bg-gray-600 transition-colors" onclick="showSlide(2)"></span>
-                    <span class="dot w-3 h-3 bg-gray-400 rounded-full cursor-pointer hover:bg-gray-600 transition-colors" onclick="showSlide(3)"></span>
-                    <span class="dot w-3 h-3 bg-gray-400 rounded-full cursor-pointer hover:bg-gray-600 transition-colors" onclick="showSlide(4)"></span>
-                    <span class="dot w-3 h-3 bg-gray-400 rounded-full cursor-pointer hover:bg-gray-600 transition-colors" onclick="showSlide(5)"></span>
-                    <span class="dot w-3 h-3 bg-gray-400 rounded-full cursor-pointer hover:bg-gray-600 transition-colors" onclick="showSlide(6)"></span>
-                    <span class="dot w-3 h-3 bg-gray-400 rounded-full cursor-pointer hover:bg-gray-600 transition-colors" onclick="showSlide(7)"></span>
-                </div>
             </div>
         </div>
         <script src="contribution.js"></script>
