--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <div class="absolute inset-0 flex flex-col items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100 p-6">
                         
                         <!-- Title -->
-                        <p class="text-white text-center font-inter font-black text-sm lg:text-4xl md:text-4xl mb-6">
+                        <p class="text-black text-stroke text-center font-inter font-black text-sm lg:text-4xl md:text-4xl mb-6">
                             UI / UX DESIGN:
                         </p>
 
@@ -263,7 +263,7 @@
                     <div class="absolute inset-0 flex flex-col items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100 p-6">
                         
                         <!-- Title -->
-                        <p class="text-amber-500 text-stroke-black text-center font-inter font-black text-sm lg:text-2xl md:text-2xl mb-6">
+                        <p class="text-amber-500 text-stroke-black text-center font-inter font-black text-sm lg:text-4xl md:text-2xl mb-6">
                             FRAMEWORKS & STACKS:
                         </p>
 
